--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@antiadmin/anticaptchaofficial": "^1.0.52",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "http-proxy-middleware": "^3.0.5",
+    "moment": "^2.30.1",
+    "mysql2": "^3.11.0",
     "nodemon": "^3.1.10",
-    "puppeteer": "^24.10.0"
+    "proxy-chain": "^2.5.1",
+    "puppeteer": "^24.10.0",
+    "puppeteer-core": "^10.4.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "tunnel": "^0.0.6"
   }
 }
